--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 11-08-04: Allowed donpcevent to go ahead and trigger specified script. [Tsusai]
- 11-07-04: REED: Reduced startup lag on large REED databases. [AlexKreuz]
- 11-07-04: REED: Ban & Diplomacy lists caused crash on reload. [AlexKreuz]
- 11-07-04: UPnP: Fixed crash when no network detected. [AlexKreuz]
- 11-06-04: UPnP: Automatic Port Forwarding Implemented. [AlexKreuz]
- 11-06-04: ISCS send option updated. [AlexKreuz]
- 11-06-04: Updated Account JCon page. [AlexKreuz]
- 11-06-04: Preparing Fusion 1.213 layout and format. [AlexKreuz]
- 11-06-04: Added NPC command "areabroadcast". [Tsusai]
- 11-05-04: Added NPC command "remotenpctimer" for npctimer situations. [Tsusai]
- 11-04-04: Added NPC command "resetmyareamob" for jobquests. [Tsusai]
- 11-04-04: Fixed pet hunger updating after feeding. [Darkhelmet]
- 11-03-04: Added NPC command "getareausers" for Priest quest. [Tsusai]
- 11-03-04: Added a countermeasure for preventing setting off OnTouch multiple times. [Tsusai]
- 11-03-04: JCon: Minor tweak to kick/ban procedure. [Tsusai]
- 11-01-04: Cleaned up the structure of #changeskill. [Trihan]
- 11-01-04: Cleaned up the structure of #zeny. [Trihan]
- 11-01-04: Cleaned up the structure of #superstats. [Trihan]
- 11-01-04: Cleaned up the structure of #statall. [Trihan]
- 11-01-04: Cleaned up the structure of #skillall. [Trihan]
- 11-01-04: Cleaned up the structure of #skillpoint. [Trihan]
- 11-01-04: Cleaned up the structure of #changestat. [Trihan]
- 11-01-04: Cleaned up the structure of #jlevel. [Trihan]
- 11-01-04: Cleaned up the structure of #blevel. [Trihan]
- 10-31-04: REED: Updated autoconversion of sample Pre-REED data. [AlexKreuz]
- 10-30-04: Added a missing semi-colin (compiler didn't see this error, odd).  [Tsusai]